...
        android:layout_gravity="bottom"
        android:gravity="center">

        <TableRow>

        <Button
            android:id="@+id/addButton"
            android:layout_weight="1"
            android:text="@string/button_add"
            android:background="@color/colorPrimary"
            android:layout_margin="8dp"
            android:contentDescription="@string/button_add"
            android:textColor="@color/material_color_white"/>

            <Button
                android:id="@+id/discardButton"
                android:contentDescription="@string/button_discard"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:text="@string/button_discard"
                android:background="@color/colorPrimary"
                android:textColor="@color/material_color_white"/>
...
