...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp">
        <TableRow>
                <Button
                    android:id="@+id/playButton"
                    android:layout_weight="1"
                    android:text="@string/button_play"
                    android:background="@color/colorPrimary"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/action_play"
                    android:textColor="@color/material_color_white"/>

                <Button
                    android:id="@+id/removeButton"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/button_delete"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/button_delete"
                    android:textColor="@color/material_color_white"/>
...
