...

        <include layout="@layout/main_rv" />

    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fab"
        android:stateListAnimator="@animator/fab_state_list_anim"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
...
